transition when recording starts is smoother now

--- a/data_recorder.ipynb
+++ b/data_recorder.ipynb
@@ -72,21 +72,19 @@
     "        if i % capture_ratio == 0:\n",
     "            resized_img = resize_image(gray, image_size)\n",
     "            cropped_img = crop_edges(resized_img, image_size)\n",
-    "            print(f\"Real: {i}\")\n",
+    "#             print(f\"Real: {i}\")\n",
     "            \n",
     "            scaled_index = int(i - (i/capture_ratio)*(capture_ratio-1) + start_index)\n",
     "            \n",
-    "            print(f\"Scaled: {scaled_index}\")\n",
+    "#             print(f\"Scaled: {scaled_index}\")\n",
     "            cv2.imwrite(f\"{PATH}{file_name}{scaled_index}{filetype}\", cropped_img)\n",
     "            print(f\"{PATH}{file_name}{scaled_index}{filetype}\")\n",
     "            cv2.imshow('Resized', cropped_img)\n",
     "            \n",
     "        cv2.imshow('BGR', frame)\n",
-    "    #     cv2.imshow('Gray', gray)\n",
-    "    #     print(gray.shape)\n",
     "\n",
     "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "            cv2.imwrite('five/kasel.jpg', gray)\n",
+    "#             cv2.imwrite('five/kasel.jpg', gray)\n",
     "            break\n",
     "\n",
     "    end = time.time()\n",
@@ -264,12 +262,12 @@
    "source": [
     "cam_index = 0\n",
     "image_size = 100\n",
-    "image_count = 50\n",
+    "image_count = 5 0\n",
     "nth_image = 3\n",
     "\n",
-    "start_index = 100\n",
+    "start_index = 1\n",
     "\n",
-    "PATH = 'five/'\n",
+    "PATH = 'd'\n",
     "file_name = 'five'\n",
     "filetype = '.jpg'\n",
     "\n",
