--- a/data_recorder.ipynb
+++ b/data_recorder.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -38,8 +38,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def capture_images(image_size, image_count, PATH, file_name, capture_ratio=1, start_index=0, filetype='.jpg', cam_index=0):\n",
@@ -97,178 +99,78 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1520459272.4015286\n",
-      "Real: 0\n",
-      "Scaled: 100\n",
-      "five/five100.jpg\n",
-      "Real: 5\n",
-      "Scaled: 101\n",
-      "five/five101.jpg\n",
-      "Real: 10\n",
-      "Scaled: 102\n",
-      "five/five102.jpg\n",
-      "Real: 15\n",
-      "Scaled: 103\n",
-      "five/five103.jpg\n",
-      "Real: 20\n",
-      "Scaled: 104\n",
-      "five/five104.jpg\n",
-      "Real: 25\n",
-      "Scaled: 105\n",
-      "five/five105.jpg\n",
-      "Real: 30\n",
-      "Scaled: 106\n",
-      "five/five106.jpg\n",
-      "Real: 35\n",
-      "Scaled: 107\n",
-      "five/five107.jpg\n",
-      "Real: 40\n",
-      "Scaled: 108\n",
-      "five/five108.jpg\n",
-      "Real: 45\n",
-      "Scaled: 109\n",
-      "five/five109.jpg\n",
-      "Real: 50\n",
-      "Scaled: 110\n",
-      "five/five110.jpg\n",
-      "Real: 55\n",
-      "Scaled: 111\n",
-      "five/five111.jpg\n",
-      "Real: 60\n",
-      "Scaled: 112\n",
-      "five/five112.jpg\n",
-      "Real: 65\n",
-      "Scaled: 113\n",
-      "five/five113.jpg\n",
-      "Real: 70\n",
-      "Scaled: 114\n",
-      "five/five114.jpg\n",
-      "Real: 75\n",
-      "Scaled: 115\n",
-      "five/five115.jpg\n",
-      "Real: 80\n",
-      "Scaled: 116\n",
-      "five/five116.jpg\n",
-      "Real: 85\n",
-      "Scaled: 117\n",
-      "five/five117.jpg\n",
-      "Real: 90\n",
-      "Scaled: 118\n",
-      "five/five118.jpg\n",
-      "Real: 95\n",
-      "Scaled: 119\n",
-      "five/five119.jpg\n",
-      "Real: 100\n",
-      "Scaled: 120\n",
-      "five/five120.jpg\n",
-      "Real: 105\n",
-      "Scaled: 121\n",
-      "five/five121.jpg\n",
-      "Real: 110\n",
-      "Scaled: 122\n",
-      "five/five122.jpg\n",
-      "Real: 115\n",
-      "Scaled: 123\n",
-      "five/five123.jpg\n",
-      "Real: 120\n",
-      "Scaled: 124\n",
-      "five/five124.jpg\n",
-      "Real: 125\n",
-      "Scaled: 125\n",
-      "five/five125.jpg\n",
-      "Real: 130\n",
-      "Scaled: 126\n",
-      "five/five126.jpg\n",
-      "Real: 135\n",
-      "Scaled: 127\n",
-      "five/five127.jpg\n",
-      "Real: 140\n",
-      "Scaled: 128\n",
-      "five/five128.jpg\n",
-      "Real: 145\n",
-      "Scaled: 129\n",
-      "five/five129.jpg\n",
-      "Real: 150\n",
-      "Scaled: 130\n",
-      "five/five130.jpg\n",
-      "Real: 155\n",
-      "Scaled: 131\n",
-      "five/five131.jpg\n",
-      "Real: 160\n",
-      "Scaled: 132\n",
-      "five/five132.jpg\n",
-      "Real: 165\n",
-      "Scaled: 133\n",
-      "five/five133.jpg\n",
-      "Real: 170\n",
-      "Scaled: 134\n",
-      "five/five134.jpg\n",
-      "Real: 175\n",
-      "Scaled: 135\n",
-      "five/five135.jpg\n",
-      "Real: 180\n",
-      "Scaled: 136\n",
-      "five/five136.jpg\n",
-      "Real: 185\n",
-      "Scaled: 137\n",
-      "five/five137.jpg\n",
-      "Real: 190\n",
-      "Scaled: 138\n",
-      "five/five138.jpg\n",
-      "Real: 195\n",
-      "Scaled: 139\n",
-      "five/five139.jpg\n",
-      "Real: 200\n",
-      "Scaled: 140\n",
-      "five/five140.jpg\n",
-      "Real: 205\n",
-      "Scaled: 141\n",
-      "five/five141.jpg\n",
-      "Real: 210\n",
-      "Scaled: 142\n",
-      "five/five142.jpg\n",
-      "Real: 215\n",
-      "Scaled: 143\n",
-      "five/five143.jpg\n",
-      "Real: 220\n",
-      "Scaled: 144\n",
-      "five/five144.jpg\n",
-      "Real: 225\n",
-      "Scaled: 145\n",
-      "five/five145.jpg\n",
-      "Real: 230\n",
-      "Scaled: 146\n",
-      "five/five146.jpg\n",
-      "Real: 235\n",
-      "Scaled: 147\n",
-      "five/five147.jpg\n",
-      "Real: 240\n",
-      "Scaled: 148\n",
-      "five/five148.jpg\n",
-      "Real: 245\n",
-      "Scaled: 149\n",
-      "five/five149.jpg\n",
-      "17.06078267097473\n"
+      "1520464115.283506\n",
+      "data/like_dislike/test/dislike/A_dislike1.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike2.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike3.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike4.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike5.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike6.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike7.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike8.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike9.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike10.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike11.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike12.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike13.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike14.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike15.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike16.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike17.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike18.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike19.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike20.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike21.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike22.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike23.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike24.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike25.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike26.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike27.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike28.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike29.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike30.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike31.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike32.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike33.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike34.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike35.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike36.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike37.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike38.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike39.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike40.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike41.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike42.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike43.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike44.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike45.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike46.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike47.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike48.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike49.jpg\n",
+      "data/like_dislike/test/dislike/A_dislike50.jpg\n",
+      "20.617616415023804\n"
      ]
     }
    ],
    "source": [
     "cam_index = 0\n",
     "image_size = 100\n",
-    "image_count = 5 0\n",
+    "image_count = 50\n",
     "nth_image = 3\n",
     "\n",
     "start_index = 1\n",
     "\n",
-    "PATH = 'd'\n",
-    "file_name = 'five'\n",
+    "PATH = 'data/like_dislike/test/dislike/'\n",
+    "file_name = 'A_dislike'\n",
     "filetype = '.jpg'\n",
     "\n",
     "capture_images(image_size=image_size, image_count=image_count, PATH=PATH, capture_ratio=5, start_index = start_index, file_name=file_name, filetype=filetype)"
@@ -276,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +187,7 @@
        "0"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
