change the checkpoint save path

--- a/simplified_training_model.ipynb
+++ b/simplified_training_model.ipynb
@@ -1377,7 +1377,9 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1407,6 +1409,42 @@
     "\n",
     "\n",
     "plot_images(images=images, true_class=true_class, pred_class=preds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 36: Train_acc: 99.58%\n",
+      "Epoch 37: Train_acc: 99.53%\n",
+      "Epoch 38: Train_acc: 99.62%\n",
+      "Epoch 39: Train_acc: 99.67%\n",
+      "Epoch 40: Train_acc: 99.90%\n",
+      "Epoch 41: Train_acc: 99.90%\n",
+      "Epoch 42: Train_acc: 99.81%\n",
+      "Epoch 43: Train_acc: 99.90%\n"
+     ]
+    }
+   ],
+   "source": [
+    "optimize(num_epochs=10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "print(f\"Test accuracy: {str(print_accuracy(test_X, test_Y) * 100)[:5]}%\")\n",
+    "print(f\"Train accuracy: {str(print_accuracy(train_X, train_Y) * 100)[:5]}%\")"
    ]
   },
   {
