updated for data2 like/dislike 64x64 images and imports checkpoints/2_simple tensorflow model

--- a/live_recognition_like_dislike.ipynb
+++ b/live_recognition_like_dislike.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -23,29 +23,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "img_size = 100\n",
+    "img_size = 64\n",
     "num_channels = 1\n",
     "num_classes = 2\n",
     "\n",
     "filter_size1 = 3\n",
-    "num_filters1 = 32\n",
+    "num_filters1 = 8\n",
     "\n",
     "filter_size2 = 3\n",
-    "num_filters2 = 64\n",
+    "num_filters2 = 16\n",
     "\n",
-    "filter_size3 = 3\n",
-    "num_filters3 = 128\n",
+    "# filter_size3 = 3\n",
+    "# num_filters3 = 128\n",
     "\n",
-    "filter_size4 = 3\n",
-    "num_filters4 = 128\n",
+    "# filter_size4 = 3\n",
+    "# num_filters4 = 128\n",
     "\n",
-    "fc_layer = 256\n",
+    "fc_layer = 128\n",
     "\n",
     "lr=0.001"
    ]
@@ -162,7 +162,9 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "x = tf.placeholder(tf.float32, shape=[None, img_size, img_size, num_channels], name='x')\n",
@@ -185,7 +187,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 3, 1, 32]\n"
+      "[3, 3, 1, 8]\n"
      ]
     }
    ],
@@ -205,7 +207,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Relu:0' shape=(?, 50, 50, 32) dtype=float32>"
+       "<tf.Tensor 'Relu:0' shape=(?, 32, 32, 8) dtype=float32>"
       ]
      },
      "execution_count": 8,
@@ -233,7 +235,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[3, 3, 32, 64]\n"
+      "[3, 3, 8, 16]\n"
      ]
     }
    ],
@@ -253,7 +255,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Relu_1:0' shape=(?, 25, 25, 64) dtype=float32>"
+       "<tf.Tensor 'Relu_1:0' shape=(?, 16, 16, 16) dtype=float32>"
       ]
      },
      "execution_count": 10,
@@ -275,42 +277,27 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 3, 64, 128]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "layer_conv3, weights_conv3 = create_conv_layer(input=layer_conv2,\n",
-    "                                              num_input_channels=num_filters2,\n",
-    "                                              filter_size=filter_size3,\n",
-    "                                              num_filters=num_filters3,\n",
-    "                                              use_pooling=True)"
+    "# layer_conv3, weights_conv3 = create_conv_layer(input=layer_conv2,\n",
+    "#                                               num_input_channels=num_filters2,\n",
+    "#                                               filter_size=filter_size3,\n",
+    "#                                               num_filters=num_filters3,\n",
+    "#                                               use_pooling=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'Relu_2:0' shape=(?, 13, 13, 128) dtype=float32>"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "layer_conv3"
+    "# layer_conv3"
    ]
   },
   {
@@ -323,42 +310,27 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[3, 3, 128, 128]\n"
-     ]
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "layer_conv4, weights_conv4 = create_conv_layer(input=layer_conv3,\n",
-    "                                              num_input_channels=num_filters3,\n",
-    "                                              filter_size=filter_size4,\n",
-    "                                              num_filters=num_filters4,\n",
-    "                                              use_pooling=True)"
+    "# layer_conv4, weights_conv4 = create_conv_layer(input=layer_conv3,\n",
+    "#                                               num_input_channels=num_filters3,\n",
+    "#                                               filter_size=filter_size4,\n",
+    "#                                               num_filters=num_filters4,\n",
+    "#                                               use_pooling=True)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<tf.Tensor 'Relu_3:0' shape=(?, 7, 7, 128) dtype=float32>"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
    "source": [
-    "layer_conv4"
+    "# layer_conv4"
    ]
   },
   {
@@ -377,12 +349,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Num features: 6272\n"
+      "Num features: 4096\n"
      ]
     }
    ],
    "source": [
-    "layer_flat, num_features = flatten_layer(layer_conv4)\n",
+    "layer_flat, num_features = flatten_layer(layer_conv2)\n",
     "print(f\"Num features: {num_features}\")"
    ]
   },
@@ -408,7 +380,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'Relu_4:0' shape=(?, 256) dtype=float32>"
+       "<tf.Tensor 'Relu_2:0' shape=(?, 128) dtype=float32>"
       ]
      },
      "execution_count": 17,
@@ -449,7 +421,7 @@
     {
      "data": {
       "text/plain": [
-       "<tf.Tensor 'add_5:0' shape=(?, 2) dtype=float32>"
+       "<tf.Tensor 'add_3:0' shape=(?, 2) dtype=float32>"
       ]
      },
      "execution_count": 19,
@@ -573,7 +545,7 @@
    },
    "outputs": [],
    "source": [
-    "save_dir = 'checkpoints/'"
+    "save_dir = 'checkpoints/2_simple/'"
    ]
   },
   {
@@ -614,7 +586,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Restoring parameters from checkpoints/\n"
+      "INFO:tensorflow:Restoring parameters from checkpoints/2_simple/\n"
      ]
     }
    ],
@@ -650,7 +622,11 @@
     "#     print(left_border)\n",
     "#     print(right_border)\n",
     "    img_cropped = img[:, left_border:right_border]\n",
-    "    return img_cropped\n"
+    "    return img_cropped\n",
+    "\n",
+    "def preprocess_images(X):\n",
+    "    X = (X / 255 * 0.99) + 0.01\n",
+    "    return X\n"
    ]
   },
   {
@@ -670,14 +646,16 @@
    },
    "outputs": [],
    "source": [
-    "image_size = 100\n",
-    "recognition_ratio = 5"
+    "image_size = 64\n",
+    "recognition_ratio = 3"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cap = cv2.VideoCapture(0)\n",
@@ -686,11 +664,18 @@
     "    gray = cv2.cvtColor(frame, cv2.COLOR_BGR2GRAY)\n",
     "    resized_img = resize_image(gray, image_size)\n",
     "    cropped_img = crop_edges(resized_img, image_size).reshape(1, img_size, img_size, 1)\n",
-    "#     print(cropped_img.shape)\n",
-    "    pred = session.run(y_pred_class, feed_dict={x: cropped_img}) \n",
+    "    scaled_img = preprocess_images(cropped_img)\n",
+    "    #     print(cropped_img.shape)\n",
+    "    pred = session.run(y_pred_class, feed_dict={x: scaled_img}) \n",
     "#     print(pred)\n",
     "    font = cv2.FONT_HERSHEY_SIMPLEX\n",
-    "    cv2.putText(frame,str(pred[0]),(50,50), font, 2,(255,255,255),2,cv2.LINE_AA)\n",
+    "    msg = \"\"\n",
+    "    if pred[0] == 0:\n",
+    "        msg = \"Like\"\n",
+    "    else:\n",
+    "        msg = \"Dislike\"\n",
+    "        \n",
+    "    cv2.putText(frame,msg,(50,50), font, 2,(255,255,255),2,cv2.LINE_AA)\n",
     "    \n",
     "    cv2.imshow('RAW', frame)\n",
     "    \n",
@@ -716,11 +701,13 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "saver = tf.train.Saver()\n",
-    "save_dir = \"checkpoints/\""
+    "# saver = tf.train.Saver()\n",
+    "# save_dir = \"checkpoints/\""
    ]
   },
   {
